# VoiceMemo-Assistant

./: README.md  env.example  requirements.txt  telegram_voice_daily_sum_bot.py.py  Концепция Telegram-бота _VoiceMemo Assistant_.txt
bot/: config.py  database.py  telegram_handler.py  utils.py
venv_files/: README.md  activate.sh  requirements-freeze.txt
voice_memo_assistant/: .gitignore  pyproject.toml  requirements.txt
voice_memo_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
voice_memo_assistant/bot/: __init__.py  constants.py  llm.py  main.py  stt.py  telegram_handler.py
voice_memo_assistant/bot/models/: __init__.py  schemas.py
